tests/examples/importing/errors/cyclic_import/service_a.si
import "service_b.si"

service A {

    deployment {
        version="0.0.1"
    }

    communication_style=rpc

    api {
        bool check_a(str some_param)
    }
}